# gravity_basins

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
shader/: Cargo.toml
shader/src/: lib.rs
shaders/shader_test/: Cargo.toml
shaders/shader_test/src/: lib.rs
src/: fragment.wgsl  main.rs  shader.rs  shader.sync-conflict-20250102-091053-MJTRNKC.rs  shader.wgsl  vertex.wgsl
