cargo-features = ["codegen-backend"]

[package]
name = "gravity_basins"
version = "0.1.0"
edition = "2024"

[dependencies]
encase = { version = "0.10.0", features = ["glam"] }
glam = "0.29.2"
pollster = "0.4.0"
wgpu = { version = "23.0.1", default-features = false, features = ["wgsl"] }
winit = { version = "0.30.5", default-features = false, features = [
  "wayland",
  "rwh_06",
] }

[build-dependencies]
miette = { version = "7.4.0", features = ["fancy"] }
wgsl_bindgen = "0.15.2"
