[package]
name = "compute-shaders"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["shaders/shader_test"]

[dependencies]
wgpu = { version = "25.0.2", default-features = false, features = [
  "vulkan",
  "spirv",
] }

[build-dependencies]
# use the main branch (or pin to a specific rev/branch/tag)
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", package = "spirv-builder", default-features = false, features = [
  "use-installed-tools",
] }

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
