[package]
name = "gravity-basins-2"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["shader"]

[workspace.dependencies]
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu.git", package = "spirv-std" }

[dependencies]
shader = { path = "shader" }
spirv-std = { workspace = true }
anyhow = "1.0.98"
env_logger = "0.11.8"
log = "0.4.27"
pollster = "0.4.0"
wgpu = { version = "25.0.2", default-features = false, features = [
  "vulkan",
  "spirv",
] }
winit = { version = "0.30.11", default-features = false, features = [
  "rwh_06",
  "wayland",
] }

[build-dependencies]
# use the main branch (or pin to a specific rev/branch/tag)
spirv-builder = { git = "https://github.com/Rust-GPU/rust-gpu.git", package = "spirv-builder", default-features = false, features = [
  "use-installed-tools",
] }

[profile.release.build-override]
opt-level = 3
codegen-units = 16
[profile.dev.build-override]
opt-level = 3
